# reconfigurable-quadruped

./: .gitignore  README.md  citations.txt  references.txt  requirements.txt
CAD files/: L-bracket.stl  quad-bottom.stl  quad-curved-leg.stl  quad-left-right.stl  quad-leg-bracket-left.stl  quad-leg-bracket-right.stl  quad-top.stl  realsense-onboard-camera-mount.stl
bowling_pin_dataset/: README.roboflow.txt
bowling_pin_dataset/test/labels/: 1661082679183_jpg.rf.743d3cb9fc06a06b4d5f42039f8a1707.txt  360_F_471958112_S4LKflscV4pWnL33FPrNcPWFyA13QQ57_jpg.rf.2faff866cda45cabf8899c2663056688.txt  38668fee8e0342e2b2a17c2bc9756995_jpeg.rf.4d7af6070137727fee0ba8f8748338d4.txt  DRWQN5QMCRE2RFEKRBLKHAUI74_jpg.rf.f05ae585fa78a672921f5e71cfddeb30.txt  DSC_9659-749x500_jpg.rf.b806eaca2aa78aad8652d33cf2838503.txt  ElectricBowl_Bowling_1800x675-1_jpg.rf.d3b0f3091e58f09bf922acfe666b0552.txt  IMG_0922_jpg.rf.dfaadbe12b8bd93dd44baf030a8ce673.txt  IMG_20150713_080318_jpg.rf.4d50e863ff2ce3ea678a6bd6cc49155f.txt  Richmond-Bowling-Pins_jpg.rf.548a77b3ea74a3e42f5e619b60e763b7.txt  Screenshot-2023-06-24-154103_png.rf.67e651bf6156b9c012e00b657b3fa1f6.txt  bexar2827_jpg.rf.b5c751dd2568279dc6e7827a8188d0fa.txt  bowling-im-american-bowl-6_jpg.rf.c4a786ca358a49662b2debdc9f1e5b84.txt  images-24-_jpg.rf.84f76b4b2f5617f61cea5a84f505528f.txt  images-27-_jpg.rf.d57338f7926a0f29d636bca27b6aa2ca.txt  k_3_jpg.rf.d37e890a5e990e107d6497309922c194.txt  maxresdefault_jpg.rf.6bc9f1ee2efb20fdfc89081fa4ea6934.txt  photo-1581084094544-5195e8c7bf76_jpeg.rf.483d58540638071e42a54ca3304ddcae.txt  sport-3438208_640_jpg.rf.6d9a28244437bc48cb6c87461d4b8343.txt  youtube-0_jpg.rf.6e46184952f288355029a92729f66b8f.txt  youtube-10_jpg.rf.3e01e7b2eda9b4151a69c9584bf7d56d.txt  youtube-10_jpg.rf.522824feea0f96fab58ce648d3a7db04.txt  youtube-119_jpg.rf.14864f645a1c893e1871b28d8e79f0ff.txt  youtube-11_jpg.rf.86147f2d830eb4be4dafc2d9015efd03.txt  youtube-124_jpg.rf.00a6a43559361b1a201d546b0ccb700c.txt  youtube-128_jpg.rf.542893fe0b0bebb1ae836a9fdd3d5e0f.txt  youtube-129_jpg.rf.58435c2806e78acc0150fcd4303a5790.txt  youtube-129_jpg.rf.a1dd333212af9523a2e57157ba8fa929.txt  youtube-14_jpg.rf.2810c1159d0136193259a23deab2f3c9.txt  youtube-152_jpg.rf.0764afb6357aa24b9e6e68c46d44bb8f.txt  youtube-167_jpg.rf.9db3aa03c3818bb008fefb68924d12e8.txt  youtube-1_jpg.rf.7708e89d8e93c069bf32ccf1f7171dd5.txt  youtube-215_jpg.rf.8cdee6f3bb0b037d160606e8a30dc84e.txt  youtube-23_jpg.rf.761104c42f843f098df8af10b1281a04.txt  youtube-242_jpg.rf.22c6d51ff500e836467998f4213402b3.txt  youtube-253_jpg.rf.6342bb89637d4db4bd9c2f20be385e97.txt  youtube-263_jpg.rf.3199863abd7faead0d55add39c2b1cd5.txt  youtube-264_jpg.rf.4fd29aa4bd8f2cac895af2839b8fbae5.txt  youtube-26_jpg.rf.a6bede6c5fb046c291e591ca552905b0.txt  youtube-270_jpg.rf.530b7e92f5936d492c223d166c05cde0.txt  youtube-276_jpg.rf.c6df503342470aa9a10d8703082c385e.txt  (+24 more)
bowling_pin_dataset/train/labels/: 01413035896e528e44daeb059200649a_jpeg.rf.64fda1f46a054e0a721c443b1f5a8a94.txt  01413035896e528e44daeb059200649a_jpeg.rf.eb2ce546c8246bc326ee1807fe38bcab.txt  018009f_Q6999U_c_jpg.rf.9dfbb97ab14667e29edb86dbf0bd76bc.txt  018009f_Q6999U_c_jpg.rf.f3f7366acd23be7735a3fe68972da43f.txt  1-ten-pin-bowling-pins-allan-swart_jpg.rf.5323a12a984557824df735bb756d08a7.txt  1-ten-pin-bowling-pins-allan-swart_jpg.rf.dd3ea4011f39c36d823d02fe0f9c27e5.txt  101027-F-1234B-012_jpeg.rf.84bbcbc6354fcbaa6afa77bc94900cef.txt  10_pins_jpg.rf.7724cd778580d3b92146b62832b90a62.txt  110912-F-DY381-026_jpeg.rf.3ebb95972ef5bbfe45f51dc0175ace16.txt  110912-F-DY381-026_jpeg.rf.c6098a6ab44ab73f0c729c7431fdaf73.txt  1638906612_30-sportishka-com-p-bouling-na-kolomenskoi-sport-krasivo-foto-39_jpg.rf.f803771f9f3f26db0a6d6bda59a58afc.txt  1_6359478_jpg.rf.0ac5b929b5392a4218b11c29fa887bc0.txt  1_6359478_jpg.rf.49a276b8696e395edf7cdc011df305a3.txt  1_6359478_jpg.rf.49ce2928aa8712674b58ff7640d72303.txt  2013-Skittle-Bowl-Slo-Mo-Strike-Montage-YouTube-793365_jpg.rf.da78034a784f5f41812c183b9e8134ea.txt  2017-06-15-14-56-37-2-_jpg.rf.40080868b427abb45b9a8bfe147b532f.txt  2020Creative_Wallpaper_Black_skittles_and_bowling_ball_on_white_background_149736_25_jpg.rf.c248af31d4d3eccdf5c1e90b8be43e27.txt  360_F_559574563_V8O4tjiY8tKJNSGumVVXgEXGBvzraQft_jpg.rf.0c59d3b1d07e2838ac04276d75638f9c.txt  360_F_559574563_V8O4tjiY8tKJNSGumVVXgEXGBvzraQft_jpg.rf.9102a6c848ffd658e570f13fb6167de0.txt  360_F_65144320_Glwe976JUAURl2cX16FpS4LpNYqlPwEV_jpg.rf.ebc3da78e65a94b08d594c9d5055d3d4.txt  (+860 more)
bowling_pin_dataset/valid/: labels.cache
c++/control/: cleaned_rolling.cpp  rolling_imu.cpp  sync_read_write.cpp
dataset/: data.yaml
humble_docker/: Dockerfile
robotis_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robotis_ws/log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/quad_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/quad_interfaces/action/: Move.action
ros2_ws/src/quad_interfaces/msg/: MotorPositions.msg  RobotState.msg  SetConfig.msg
ros2_ws/src/quad_interfaces/srv/: GetAllPositions.srv
ros2_ws/src/quad_motor_control/: CMakeLists.txt  package.xml
ros2_ws/src/quad_motor_control/include/quad_motor_control/: position_configs.hpp  postition_configs.hpp  quad_motor_control.hpp
ros2_ws/src/quad_motor_control/src/: motor_helpers.cpp  quad_motor_control.cpp
ros2_ws/src/quad_vision/: CMakeLists.txt  package.xml
ros2_ws/src/quad_vision/config/: detect_bowling_pins.rviz
ros2_ws/src/quad_vision/launch/: image.launch.xml
ros2_ws/src/quad_vision/scripts/: bridger.py  yolo.py
src/snapbot/: CMakeLists.txt  package.xml
yolo/: train_yolo.py
yolo/bowling_pin_dataset/: README.dataset.txt
(+1400 files in other folders)
