<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quad_vision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="annguyen2025@u.northwestern.edu">annguyen</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_cmake_python</depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- C++ dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>

  <!-- Python dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>ultralytics</exec_depend>

  <!-- ROS2 launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
